--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
   },
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/src/.internal/"
+    ]
+  },
   "author": "",
   "license": "MIT",
   "devDependencies": {
