--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,9 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test
+    - run: npm run test:coverage
+    - name:  Coveralls
+      uses: coverallsapp/github-action@v2
+      with:
+        github-token: ${{ secrets. GITHUB_TOKEN }}
+
