fix coveralls workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,7 +4,7 @@
 name: Node.js CI
 
 on:
-  push:
+  push: 
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
@@ -15,15 +15,15 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-      matrix:
+      matrix: 
         node-version: [18.x, 20.x, 22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v4
+    - uses:  actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
-      with:
+      with: 
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
@@ -32,5 +32,16 @@ jobs:
     - name:  Coveralls
       uses: coverallsapp/github-action@v2
       with:
-        github-token: ${{ secrets. GITHUB_TOKEN }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        parallel: true
+        flag-name: node-${{ matrix.node-version }}
 
+  finish:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Coveralls Finished
+      uses: coverallsapp/github-action@v2
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        parallel-finished: true
