--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,34 +14,17 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix: 
-        node-version: [18.x, 20.x, 22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses:  actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 20.x
       uses: actions/setup-node@v4
-      with: 
-        node-version: ${{ matrix.node-version }}
+      with:  
+        node-version: 20.x
         cache: 'npm'
-    - run: npm ci
+    - run:  npm ci
     - run: npm run build --if-present
     - run: npm run test:coverage
     - name:  Coveralls
       uses: coverallsapp/github-action@v2
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        parallel: true
-        flag-name: node-${{ matrix.node-version }}
-
-  finish:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - name: Coveralls Finished
-      uses: coverallsapp/github-action@v2
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        parallel-finished: true
+        github-token: ${{ secrets. GITHUB_TOKEN }}
