--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,8 @@ jobs:
     - run:  npm ci
     - run: npm run build --if-present
     - run: npm run test:coverage
+      continue-on-error: true
     - name:  Coveralls
       uses: coverallsapp/github-action@v2
       with:
-        github-token: ${{ secrets. GITHUB_TOKEN }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
