--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,7 +21,7 @@ jobs:
       with:  
         node-version: 20.x
         cache: 'npm'
-    - run:  npm ci
+    - run: npm ci
     - run: npm run build --if-present
     - run: npm run test:coverage
       continue-on-error: true
@@ -29,3 +29,4 @@ jobs:
       uses: coverallsapp/github-action@v2
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
+        file: ./coverage/lcov.info
